Update 'xoa9hu5cr-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.rhopp-rosa.szh1.p3.openshiftapps.com/rhtap/rhtap-qe:8c11747eebe2aae6e03764c3ab1fa26760842b03@sha256:a7a367f256708ad81046a28d68625092b281f41ee912fe839700e02783af0784

--- a/components/xoa9hu5cr-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/xoa9hu5cr-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xoa9hu5cr-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.rhopp-rosa.szh1.p3.openshiftapps.com/rhtap/rhtap-qe:8c11747eebe2aae6e03764c3ab1fa26760842b03@sha256:a7a367f256708ad81046a28d68625092b281f41ee912fe839700e02783af0784
+          name: container-image
